added ddl, created database
